# pyotter

./: .gitignore  CHANGELOG.md  README.md  pyotter_version.py  pyproject.toml  setup.py
.hooks/: pre-commit
docs/: .gitignore  classes.rst  conf.py  index.rst  intro.rst  modules.rst  otter.core.chunks.rst  otter.core.events.rst  otter.core.rst  otter.core.tasks.rst  otter.log.config.rst  otter.log.rst  otter.reporting.rst  otter.reporting.templates.rst  otter.rst  otter.utils.rst
docs/themes/: furo.py  groundwork.py  insegel.py  pdj.py  press.py  sphinx_material.py  sphinx_rtd_theme.py
otter/: __init__.py  __main__.py  args.py  chunks.py  decorators.py  definitions.py  graph_styling.py  helpers.py  interact.py  main.py  project.py  reader.py  report.py  run.py  simulate.py  styling.py  trace.py  types.py
otter/ChunkFactory/: ChunkFactory.py  __init__.py  chunks.py
otter/EventFactory/: EventFactory.py  __init__.py  __main__.py  events.py
otter/TaskRegistry/: TaskRegistry.py  __init__.py  tasks.py
otter/core/: __init__.py  chunk_builder.py  chunk_reader.py  chunk_writer.py  chunks.py  event_model.py  events.py  task_builder.py  tasks.py
otter/db/: __init__.py  buffered_writers.py  connect.py  crit_task_writer.py  query.py  schedule_writer.py  scripts.py  task_writer.py
otter/events/: __init__.py  events.py
otter/gui/: __main__.py  _login_window_example.py  app.py  dialog.py  login_manager.py  main_window.py
otter/log/: __init__.py  initialise.py  levels.py
otter/logging/: __init__.py
otter/otf2_ext/: __init__.py  event_reader.py  reader.py
(+77 files in other folders)
