[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "pyotter"
description = "Otter post-processing tool."
readme = "README.md"
version = "0.2.0"
authors = [{ name = "Adam Tuft", email = "adam.s.tuft@durham.ac.uk" }]
dependencies = [
    "pyyaml>=6.0",
    "igraph",
    "otf2",
    "loggingdecorators>=0.1.3",
    "address_to_line>=0.1.2",
]
license = { file = "LICENSE" }

[project.scripts]
otter = "otter.main:select_action"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"otter.reporting.templates" = ["*.html"]
"otter.log.config" = ["*.yaml"]
"otter.db._scripts" = ["*.sql"]

[tool.black]
target-versions = ["py38", "py39", "py310", "py311"]
include = '/otter'
extend-exclude = '.sql$|.html$|.yaml$'
